# htmx-tutorial

./: Makefile  README.md  manage.py  pyproject.toml  requirements.txt
BugBytesHtmx/: asgi.py  settings.py  urls.py  wsgi.py
films/: admin.py  models.py  urls.py  utils.py  views.py
films/migrations/: 0001_initial.py  0002_film.py  0003_auto_20240304_1937.py  0004_alter_film_users.py  0005_film_photo.py
films/templates/: base.html  films.html  partials.film-list.html
films/templates/partials/: film-detail.html  film-list-elements.html  film-list.html  navbar.html  search-results.html  search.html
films/templates/registration/: register.html
gdp/: apps.py  models.py  urls.py  views.py
gdp/management/commands/: load_gdp_data.py
gdp/migrations/: 0001_initial.py  0002_alter_gdp_gdp.py
gdp/templates/: gdp_index.html  line.html
requirements/: requirements.dev.in  requirements.dev.txt  requirements.in
scores/: models.py  urls.py  views.py
scores/management/commands/: load_teams.py  result_generator.py
scores/migrations/: 0001_initial.py
scores/templates/: fixtures.html
scores/templates/partials/: fixturelist.html
static/css/: styles.css
university/: models.py  urls.py  views.py
university/management/commands/: load_data.py
university/migrations/: 0001_initial.py
university/templates/: university.html
university/templates/partials/: modules.html
